# Hackathon-GIAIC-2-Todo-App

./: .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  GOOGLE_OAUTH_SETUP.md  HUGGINGFACE_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  deploy-to-huggingface.ps1  package.json  pyproject.toml  vercel.json
.claude/: settings.local.json  test-app.js
.claude/skills/better-auth-oauth-implementation/: SKILL.md
.vercel/: project.json
Backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  coverage.xml  pyproject.toml  requirements.txt
Backend/api/: index.py  test.py
Backend/app/: config.py  database.py  dependencies.py  main.py
Backend/app/agents/: __init__.py  context.py  task_tools.py  task_tools_full.py
Backend/app/middleware/: rate_limiter.py
Backend/app/models/: __init__.py  task.py  user.py
Backend/app/routers/: agent.py  auth.py  tasks.py
Backend/app/schemas/: __init__.py  common.py  task.py  user.py
Backend/app/utils/: security.py
Backend/migrations/: add_google_id.sql
Backend/scripts/: add_password_hash.sql  add_password_hash_simple.sql  init_db.py  migrate.sql  seed.sql
Backend/tests/: conftest.py  test_auth.py  test_auth_integration.py  test_models.py  test_schemas.py  test_tasks_integration.py
frontend/: deploy-frontend.sh  next.config.ts  package-lock.json  package.json  setup-env.js  tailwind.config.js  test-oauth-complete.js  test-oauth-detailed.js  test-oauth.js  vercel.json  vitest.config.ts
frontend/src/app/: Scroll-Wrapper.tsx  global.css  layout.tsx  page.tsx  template.tsx
frontend/src/components/: animated-background.tsx  chat-input.tsx  chat-message.tsx  chat-widget.tsx  checkbox.tsx  empty-state.tsx  glass-button.tsx  glass-card.tsx  loading-spinner.tsx  page-reveal.tsx  page-transition.tsx  stats-card.tsx  task-card.tsx  theme-provider.tsx  theme-toggle.tsx  toast.tsx
frontend/src/hooks/: use-agent-chat-simple.ts  use-agent-chat.ts
frontend/src/lib/: agent-client.ts  chat-security.ts  chat-storage.ts
frontend/src/styles/: glass.css
frontend/tests/: setup.ts
frontend/tests/e2e/: auth-flow.spec.ts  isolation.spec.ts  task-crud.spec.ts
history/prompts/001-ai-chatbot/: 001-ai-chatbot-spec-001.md  20250116-ai-chatbot-clarification.md  20250116-ai-chatbot-planning-phase.md  20250116-openai-agents-sdk-update.md  20250116-plan-update.md  20250116-tasks-generation.md
history/prompts/001-better-auth-oauth/: 20250113-001-create-better-auth-oauth-skill-spec.md  20250113-002-better-auth-oauth-plan.md  20250113-003-better-auth-oauth-tasks.md  20250113-004-better-auth-skill-creation.md
history/prompts/001-todo-cli-core/: 001-create-todo-cli-spec.spec.prompt.md  002-create-todo-cli-plan.plan.prompt.md  003-generate-todo-cli-tasks.tasks.prompt.md  004-implement-todo-cli-mvp.green.prompt.md
history/prompts/002-full-stack-web-app/: 001-implementation-plan-full-stack.plan.prompt.md  002-initialize-projects-backend-frontend.green.prompt.md  003-generate-implementation-tasks.tasks.prompt.md
history/prompts/003-modern-ui-upgrade/: 001-modern-ui-upgrade.spec.prompt.md  (+3 more)
specs/001-ai-chatbot/: ARCHITECTURE_UPDATE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-better-auth-oauth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-cli-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-full-stack-web-app/: plan.md  quickstart.md  spec.md  tasks.md
specs/003-modern-ui-upgrade/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/todo_cli/: __init__.py  cli.py  exceptions.py
tests/integration/: test_cli_workflows.py
(+39 files in other folders)
