[project]
name = "backend"
version = "0.1.0"
description = "Todo API backend with FastAPI and JWT authentication"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "pydantic>=2.0.0",
    "pyjwt>=2.10.0",
    "python-multipart>=0.0.9",
    "psycopg[binary]>=3.2.0",
    "psycopg2-binary>=2.9.0",
    "email-validator>=2.0.0",
    "python-dotenv>=1.0.0",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "openai-agents>=0.1.0",
    "litellm>=1.0.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
